# art.kubus

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  ARCHITECTURE.md  AUDIT.md  AUTH_UX_FIX_COMPLETION_REPORT.md  BUG_FIX_SESSION_REPORT.md  CODE_OF_CONDUCT.md  COMPLETE_AUDIT.md  CONTRIBUTING.md  DESLOPPIFY.md  DEV_NOTES.md  GOVERNANCE.md  HANDOFF_SEO_AEO.md  LICENSE_ASSETS.md  MAP_FIXES_SUMMARY.md  MAP_OPTIMIZATIONS_SUMMARY.md  MAP_OVERLAY_FIXES.md  MAP_OVERLAY_REVIEW.md  NOTICE  ONBOARDING_REWORK_PLAN.md  README.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  analysis_options.yaml  docker-compose.dev.yml  kub8_metadata.json  map_agents.md  package.json  performance_optimiziation_progress.md  progress.md  pubspec.yaml  repo_ui_debt_followup_audit_2026-04-09.md  run_tests.bat  stacktrace.txt  stacktrace_type.txt  test_simple_solana.dart  (+5 more)
.claude/: README.md  settings.json
.github/: copilot-instructions-older.md  copilot-instructions.md  copilot-instructions_old.md  dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-06-16T16-49-07-776Z.yml  page-2026-06-16T16-50-56-938Z.yml  page-2026-06-16T16-51-42-297Z.yml  page-2026-06-16T16-52-38-081Z.yml  page-2026-06-16T16-52-51-798Z.yml  page-2026-06-16T16-53-47-698Z.yml  page-2026-06-16T16-55-06-744Z.yml  page-2026-06-16T16-55-48-294Z.yml  page-2026-06-16T16-56-17-205Z.yml
.rescue/: backend_rescue_patch.diff
android/: .gitignore  build.gradle  (+2 more)
programs/fee-splitter/: Cargo.toml  README.md
programs/fee-splitter/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
(+1452 files in other folders)
