[package]
name = "art-kubus-fee-splitter"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Standalone Solana fee splitter program for art.kubus"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
borsh = { version = "1.6.0", features = ["derive"] }
solana-program = "4.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
